dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          imagePullPolicy: IfNotPresent
          image: rohitjm/todo-app:efb6c13c5b93ebae9bf4f9273a9deff9d1ea3e02
