dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path:
            pathType: ImplementationSpecific
            backend:
              service:
                name: todo-app-service
                port:
                  number: 80
